Contrast fix

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -5,7 +5,7 @@ p {
     margin-block-end: 0em;
 }
 body {
-    background-color: #D1D2D3;
+    background-color: #E8E9E9/*#D1D2D3*/;
     font-family: "Roboto";
     min-width: 370px;
 }
